tests/snapshots/unexpected_eof__unclosed_check_stmt.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: expected keyword `please`, found end of file
      |
    3 |         please add 5 to 6.
      |                           ^
      |

Although I do know what the next token must be, I cannot just make the assumption and treat the next token like it was the token I want.
You could replace the token with the one I expected.

